1. 发布2.3.0 2. Demo目录重新规划 3. CDN地址改变

--- a/Web/Demo/index.html
+++ b/Web/Demo/index.html
@@ -87,6 +87,7 @@
     .el-main {
       padding: 0 !important;
       overflow: hidden !important;
+      height: 100%;
     }
 
     .el-container {
@@ -462,22 +463,20 @@
   </div>
 
   <!-- AXIOS SDK 白板SDK依赖axios（后续版本会去掉该依赖） -->
-  <script src="https://tic-res-1257240443.file.myqcloud.com/thirdpart/axios/axios.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/axios/axios.min.js"></script>
 
   <!-- WebRTC SDK -->
   <script src="https://sqimg.qq.com/expert_qq/webrtc/3.4.1/WebRTCAPI.min.js"></script>
   <!-- WebIM SDK -->
-  <script src="https://tic-res-1257240443.file.myqcloud.com/webim/1.7.1/webim.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/webim/1.7.1/webim.min.js"></script>
   <!-- COS SDK -->
-  <script src="https://tic-res-1257240443.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
   <!-- 白板SDK -->
-  <!-- <script src="https://sqimg.qq.com/expert_qq/tedu/board/2.2.2/TEduBoard.min.js"></script> -->
-  <script src="https://tic-res-1257240443.file.myqcloud.com/board/2.3.0/TEduBoard.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.0/TEduBoard.min.js"></script>
   <!-- <script src="libs/TEduBoard.min.js"></script> -->
 
   <!-- TIC SDK 可根据开源代码自行编译TIC-->
-  <!-- <script src="https://sqimg.qq.com/expert_qq/tedu/tic/2.2.0/TIC.min.js"></script> -->
-  <script src="https://tic-res-1257240443.file.myqcloud.com/tic/2.2.1/TIC.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.2.1/TIC.min.js"></script>
   <!-- <script src="libs/TIC.js"></script> -->
 
   <script src="libs/thirdpart/purl.js"></script>
