--- a/Web/Demo/index.html
+++ b/Web/Demo/index.html
@@ -424,11 +424,8 @@
                   <el-option label="Light Animation-blue"
                     v-bind:value="'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/2019-05-08-15-38-54/index.html'">
                   </el-option>
-                  <el-option label="Light Animation-peach"
-                    v-bind:value="'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/2019-05-08-15-18-25-0/index.html'">
-                  </el-option>
-                  <el-option label="test50-职上"
-                    v-bind:value="'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/9m4e2mr0ui3e8a215n4g/index.html'">
+                  <el-option label="欢迎新同学"
+                    v-bind:value="'https://ppt2h5-1259648581.cos.ap-shanghai.myqcloud.com/00c71am880jcqc5p5rkb/index.html'">
                   </el-option>
                   <el-option label="341-国立教学方案"
                     v-bind:value="'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/0o5stagbd6b264ei59jb/index.html'">
@@ -466,17 +463,18 @@
   <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/axios/axios.min.js"></script>
 
   <!-- WebRTC SDK -->
-  <script src="https://sqimg.qq.com/expert_qq/webrtc/3.4.1/WebRTCAPI.min.js"></script>
+  <script src="https://sqimg.qq.com/expert_qq/webrtc/3.1.0/WebRTCAPI.min.js"></script>
   <!-- WebIM SDK -->
   <script src="https://tic-res-1259648581.file.myqcloud.com/webim/webim.min.js"></script>
 
   <!-- COS SDK -->
   <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
   <!-- 白板SDK -->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.1/TEduBoard.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.2/TEduBoard.min.js"></script>
 
   <!-- TIC SDK 可根据开源代码自行编译TIC-->
   <script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.2.2/TIC.min.js"></script>
+  <!-- <script src="libs/TIC.js"></script> -->
 
   <script src="libs/thirdpart/purl.js"></script>
   <script src="libs/thirdpart/vconsole.min.js"></script>
