--- a/PaaS/Web/Demo/index.html
+++ b/PaaS/Web/Demo/index.html
@@ -36,12 +36,6 @@
       text-align: right;
     }
 
-    video {
-      width: 100%;
-      max-width: 100px;
-      max-height: 100px;
-    }
-
     .promption {
       color: #A0A0A0
     }
@@ -64,10 +58,12 @@
 
     #video_wrap {
       height: 100px;
+      display: flex;
     }
 
-    #video_wrap video {
-      margin: 0 5px;
+    #video_wrap>div {
+      width: 134px;
+      height: 100%;
     }
 
     #paint_box {
@@ -191,7 +187,7 @@
               <!--左边栏 版本 -->
               <el-tab-pane label="版本">
                 <p v-text="'Board: ' + TEduBoard.getVersion() "></p>
-                <p v-text="'WebRTC: ' + WebRTCAPI.version()"></p>
+                <p v-text="'WebRTC: ' + TRTC.VERSION"></p>
                 <p v-text="'IM: 1.7.1'"> </p>
               </el-tab-pane>
             </el-tabs>
@@ -222,7 +218,7 @@
                 </template>
               </el-header>
               <el-main>
-                <div class="row" id="video_wrap"></div>
+                <div id="video_wrap"></div>
               </el-main>
             </el-container>
           </el-header>
@@ -251,6 +247,7 @@
               <el-main>
                 <ul id="msg_box" class="im-log-box">
                   <li v-for="msg in msgs">
+                    <span class="send">{{msg.time}}</span>
                     <span class="send">{{msg.send}}</span>
                     <span class="content">{{msg.content}}</span>
                   </li>
@@ -301,6 +298,7 @@
 
               <el-form-item label="涂鸦工具">
                 <el-select placeholder="工具" v-model="toolType" @change="onSetToolType">
+                  <el-option label="鼠标" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_MOUSE"></el-option>
                   <el-option label="画笔" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_PEN"></el-option>
                   <el-option label="直线" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_LINE"></el-option>
                   <el-option label="实心(椭)圆" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_OVAL_SOLID">
@@ -316,7 +314,6 @@
                   <el-option label="点选" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_POINT_SELECT">
                   </el-option>
                   <el-option label="移动" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_ZOOM_DRAG"></el-option>
-                  <el-option label="鼠标" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_MOUSE"></el-option>
                 </el-select>
               </el-form-item>
 
@@ -421,11 +418,14 @@
 
               <el-form-item label="新增H5文件">
                 <el-select placeholder="H5文件" @change="onAddH5File">
-                  <el-option label="欢迎新同学"
-                    v-bind:value="'https://ppt2h5-1259648581.cos.ap-shanghai.myqcloud.com/00c71am880jcqc5p5rkb/index.html'">
+                  <el-option label="Light Animation-blue"
+                    v-bind:value="'https://ppt2h5-1259648581.file.myqcloud.com/0lnq5i0gktgtv4pdbrmb/index.html'">
                   </el-option>
-                  <el-option label="教学方案"
-                    v-bind:value="'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/0o5stagbd6b264ei59jb/index.html'">
+                  <el-option label="欢迎新同学"
+                    v-bind:value="'https://ppt2h5-1259648581.file.myqcloud.com/00c71am880jcqc5p5rkb/index.html'">
+                  </el-option>
+                  <el-option label="国立教学方案"
+                    v-bind:value="'https://ppt2h5-1259648581.file.myqcloud.com/07kb8u52vr7q4e4hbrmb/index.html'">
                   </el-option>
                 </el-select>
               </el-form-item>
@@ -460,22 +460,26 @@
   <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/axios/axios.min.js"></script>
 
   <!-- WebRTC SDK -->
-  <script src="https://sqimg.qq.com/expert_qq/webrtc/3.4.2/WebRTCAPI.min.js"></script>
+  <!-- <script src="https://sqimg.qq.com/expert_qq/webrtc/3.4.2/WebRTCAPI.min.js"></script> -->
+  <script src="./libs/trtc.js"></script>
   <!-- WebIM SDK -->
   <script src="https://tic-res-1259648581.file.myqcloud.com/webim/webim.min.js"></script>
 
   <!-- COS SDK -->
   <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
+
   <!-- 白板SDK -->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.3/TEduBoard.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.5/TEduBoard.min.js"></script>
+  <!-- <script src="libs/TEduBoard.min.js"></script> -->
 
   <!-- TIC SDK 可根据开源代码自行编译TIC-->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.3.0/TIC.min.js"></script>
+  <script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.4.0/TIC.min.js"></script>
   <!-- <script src="libs/TIC.js"></script> -->
 
   <script src="libs/thirdpart/purl.js"></script>
   <script src="libs/thirdpart/vconsole.min.js"></script>
   <script src="js/account_dev.js"></script>
+  <!-- <script src="account/1400162216.js"></script> -->
   <script src="js/main.js"></script>
 
   <script>
