--- a/PaaS/Web/Demo/index.html
+++ b/PaaS/Web/Demo/index.html
@@ -203,7 +203,7 @@
         <el-container>
 
           <!--中间区  视频区 -->
-          <el-header style="height: 130px">
+          <el-header style="height: 100px">
             <el-container>
               <el-header style="height: 42px;">
                 <el-button plain @click="startRTC" type="button" :disabled="status < STATUS_INCLASS" v-text="'摄像头推流'"
@@ -237,6 +237,12 @@
               <el-main>
                 <div id="paint_box" style="background-color: rgb(240, 240, 240);"></div>
               </el-main>
+              <el-footer style="height: 80px;">
+                <div style="text-align: center; padding-top: 30px; color: gray;" v-if="thumbUrls.length == 0">此文件不支持缩略图</div> 
+                <div style="overflow-x: scroll visible; overflow-y:hidden; white-space:nowrap; height:inherit; ">
+                    <img style="height: 100%; margin-right: 3px;" v-for="(item, index) in thumbUrls" :name="index" :src="item" v-on:click="onThumbClick(index)"><img>
+                </div>
+              </el-footer>
             </el-container>
           </el-main>
 
@@ -362,6 +368,11 @@
                 </el-select>
               </el-form-item>
 
+              <el-form-item label="添加图片资源">
+                  <el-select placeholder="图片url"  @change="onAddImageElement">
+                    <el-option label="腾讯云" v-bind:value="'https://tic-res-1259648581.cos.ap-shanghai.myqcloud.com/demo/qcloud.jpg'"></el-option>
+                  </el-select>
+                </el-form-item>
             </el-form>
 
           </el-tab-pane>
@@ -416,19 +427,25 @@
                   accept="image/*, application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document, application/vnd.openxmlformats-officedocument.presentationml.presentation, application/vnd.ms-powerpoint, application/vnd.ms-excel">
               </el-form-item>
 
-              <el-form-item label="新增H5文件">
-                <el-select placeholder="H5文件" @change="onAddH5File">
-                  <el-option label="Light Animation-blue"
-                    v-bind:value="'https://ppt2h5-1259648581.file.myqcloud.com/0lnq5i0gktgtv4pdbrmb/index.html'">
-                  </el-option>
-                  <el-option label="欢迎新同学"
-                    v-bind:value="'https://ppt2h5-1259648581.file.myqcloud.com/00c71am880jcqc5p5rkb/index.html'">
-                  </el-option>
-                  <el-option label="国立教学方案"
-                    v-bind:value="'https://ppt2h5-1259648581.file.myqcloud.com/07kb8u52vr7q4e4hbrmb/index.html'">
+              <el-form-item label="新增视频文件">
+                <el-select placeholder="视频文件" @change="onAddVideoFile">
+                  <el-option label="腾讯教育"
+                    v-bind:value="'https://tic-res-1259648581.cos.ap-shanghai.myqcloud.com/demo/tiw-vod.mp4'">
                   </el-option>
                 </el-select>
               </el-form-item>
+
+              <el-form-item label="新增H5网页">
+                <el-select placeholder="H5网页地址" @change="onAddH5File">
+                  <el-option label="腾讯云互动课堂"
+                      v-bind:value="'https://cloud.tencent.com/solution/tic'">
+                  </el-option>
+                  <el-option label="腾讯云官网"
+                    v-bind:value="'https://cloud.tencent.com/'">
+                  </el-option>
+                </el-select>
+              </el-form-item>
+
 
               <el-form-item label="切换文件">
                 <el-select @change="onSwitchFile" placeholder="切换">
@@ -456,30 +473,33 @@
 
   </div>
 
+  <script src="//imgcache.qq.com/open/qcloud/video/vcplayer/TcPlayer-2.3.2.js" charset="utf-8"></script>
+
   <!-- AXIOS SDK 白板SDK依赖axios（后续版本会去掉该依赖） -->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/axios/axios.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/axios/axios.min.js"></script>
 
   <!-- WebRTC SDK -->
   <!-- <script src="https://sqimg.qq.com/expert_qq/webrtc/3.4.2/WebRTCAPI.min.js"></script> -->
   <script src="./libs/trtc.js"></script>
   <!-- WebIM SDK -->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/webim/webim.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/webim/webim.min.js"></script>
 
   <!-- COS SDK -->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/cos/5.1.0/cos.min.js"></script>
 
   <!-- 白板SDK -->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.7/TEduBoard.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/board/2.4.0/TEduBoard.min.js"></script>
   <!-- <script src="libs/TEduBoard.min.js"></script> -->
 
   <!-- TIC SDK 可根据开源代码自行编译TIC-->
-  <script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.4.0/TIC.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/tic/2.4.1/TIC.min.js"></script>
   <!-- <script src="libs/TIC.js"></script> -->
 
   <script src="libs/thirdpart/purl.js"></script>
   <script src="libs/thirdpart/vconsole.min.js"></script>
   <script src="js/account_dev.js"></script>
-  <!-- <script src="account/1400162216.js"></script> -->
+  <!-- <script src="account/1400162216.js"></script>
+  <script src="account/1400189148.js"></script> -->
   <script src="js/main.js"></script>
 
   <script>
