--- a/PaaS/Web/Demo/index.html
+++ b/PaaS/Web/Demo/index.html
@@ -68,11 +68,11 @@
 
     #paint_box {
       position: relative;
-      width: 100%;
-      height: 100%;
+      width: 800px;
+      height: 450px;
       border: 1px solid #888;
       overflow: hidden;
-      box-sizing: border-box;
+      box-sizing: content-box;
     }
 
     .el-header,
@@ -157,8 +157,7 @@
                   </el-form-item>
 
                   <el-form-item>
-                    <el-button @click="createClassroom" :disabled="status < STATUS_LOGINED || status == STATUS_INCLASS"
-                      v-text="'创建房间'"></el-button>
+                    <el-button @click="createClassroom" :disabled="status < STATUS_LOGINED || status == STATUS_INCLASS" v-text="'创建房间'"></el-button>
                   </el-form-item>
 
                   <el-form-item>
@@ -167,8 +166,7 @@
                   </el-form-item>
 
                   <el-form-item>
-                    <el-button @click="joinClassroom" :disabled="status < STATUS_LOGINED || status == STATUS_INCLASS"
-                      v-text="'进入房间'"></el-button>
+                    <el-button @click="joinClassroom" :disabled="status < STATUS_LOGINED || status == STATUS_INCLASS" v-text="'进入房间'"></el-button>
                   </el-form-item>
 
                   <el-form-item>
@@ -206,8 +204,7 @@
           <el-header style="height: 100px">
             <el-container>
               <el-header style="height: 42px;">
-                <el-button plain @click="startRTC" type="button" :disabled="status < STATUS_INCLASS" v-text="'摄像头推流'"
-                  size="mini"></el-button>
+                <el-button plain @click="startRTC" type="button" :disabled="status < STATUS_INCLASS" v-text="'摄像头推流'" size="mini"></el-button>
                 <el-button plain @click="pushScreen" :disabled="status < STATUS_INCLASS" v-text="'屏幕分享'" size="mini">
                 </el-button>
                 <el-button @click="stopPush" v-if="isPushing === 1" size="mini">停止推流</el-button>
@@ -227,10 +224,8 @@
           <el-main>
             <el-container>
               <el-header style="height: 42px;">
-                <el-tabs size="mini" v-model="currentFileId" closable type="card" @tab-remove="onDeleteFileById"
-                  @tab-click="onClickBoardTab">
-                  <el-tab-pane size="mini" :key="file.fid" v-for="file in fileInfoList" :label="file.title"
-                    :name="file.fid">
+                <el-tabs size="mini" v-model="currentFileId" closable type="card" @tab-remove="onDeleteFileById" @tab-click="onClickBoardTab">
+                  <el-tab-pane size="mini" :key="file.fid" v-for="file in fileInfoList" :label="file.title" :name="file.fid">
                   </el-tab-pane>
                 </el-tabs>
               </el-header>
@@ -238,9 +233,10 @@
                 <div id="paint_box" style="background-color: rgb(240, 240, 240);"></div>
               </el-main>
               <el-footer style="height: 80px;">
-                <div style="text-align: center; padding-top: 30px; color: gray;" v-if="thumbUrls.length == 0">此文件不支持缩略图</div> 
+                <div style="text-align: center; padding-top: 30px; color: gray;" v-if="thumbUrls.length == 0">此文件不支持缩略图
+                </div>
                 <div style="overflow-x: scroll visible; overflow-y:hidden; white-space:nowrap; height:inherit; ">
-                    <img style="height: 100%; margin-right: 3px;" v-for="(item, index) in thumbUrls" :name="index" :src="item" v-on:click="onThumbClick(index)"><img>
+                  <img style="height: 100%; margin-right: 3px;" v-for="(item, index) in thumbUrls" :name="index" :src="item" v-on:click="onThumbClick(index)"><img>
                 </div>
               </el-footer>
             </el-container>
@@ -333,7 +329,11 @@
               </el-form-item>
 
               <el-form-item label="字体颜色">
-                <el-color-picker @active-change="onSetTextColor" v-model="textColor" size="mini"></el-color-picker>
+                <button type="button" style="padding:0;width:20px;height:20px;background: #ff0000;border:none;" @mousedown.prevent="onSetTextColor('#ff0000')"></button>
+                <button type="button" style="padding:0;width:20px;height:20px;background: #00ff00;border:none;" @mousedown.prevent="onSetTextColor('#00ff00')"></button>
+                <button type="button" style="padding:0;width:20px;height:20px;background: #0000ff;border:none;" @mousedown.prevent="onSetTextColor('#0000ff')"></button>
+                <button type="button" style="padding:0;width:20px;height:20px;background: #ffff00;border:none;" @mousedown.prevent="onSetTextColor('#ffff00')"></button>
+                <button type="button" style="padding:0;width:20px;height:20px;background: #000000;border:none;" @mousedown.prevent="onSetTextColor('#000000')"></button>
               </el-form-item>
 
               <el-form-item label="字体大小">
@@ -350,14 +350,10 @@
 
               <el-form-item label="设置背景">
                 <el-select placeholder="工具" v-model="backgroundImage" @change="onSetBackgroundImage">
-                  <el-option label="美图1"
-                    v-bind:value="'https://main.qcloudimg.com/raw/36d31e0d6f9d24a9b5727ab5e21b4b8c.jpg'"></el-option>
-                  <el-option label="美图2"
-                    v-bind:value="'https://main.qcloudimg.com/raw/a748528fecffd13a466a3a6c23ad1f45.jpg'"></el-option>
-                  <el-option label="美图3"
-                    v-bind:value="'https://main.qcloudimg.com/raw/5e3f50336b85071ef09affcd967e679d.jpg'"></el-option>
-                  <el-option label="美图4"
-                    v-bind:value="'https://main.qcloudimg.com/raw/4a897d60a49ae211f6e492f6ebe8340f.jpg'"></el-option>
+                  <el-option label="美图1" v-bind:value="'https://main.qcloudimg.com/raw/36d31e0d6f9d24a9b5727ab5e21b4b8c.jpg'"></el-option>
+                  <el-option label="美图2" v-bind:value="'https://main.qcloudimg.com/raw/a748528fecffd13a466a3a6c23ad1f45.jpg'"></el-option>
+                  <el-option label="美图3" v-bind:value="'https://main.qcloudimg.com/raw/5e3f50336b85071ef09affcd967e679d.jpg'"></el-option>
+                  <el-option label="美图4" v-bind:value="'https://main.qcloudimg.com/raw/4a897d60a49ae211f6e492f6ebe8340f.jpg'"></el-option>
                 </el-select>
               </el-form-item>
 
@@ -369,10 +365,10 @@
               </el-form-item>
 
               <el-form-item label="添加图片资源">
-                  <el-select placeholder="图片url"  @change="onAddImageElement">
-                    <el-option label="腾讯云" v-bind:value="'https://tic-res-1259648581.cos.ap-shanghai.myqcloud.com/demo/qcloud.jpg'"></el-option>
-                  </el-select>
-                </el-form-item>
+                <el-select placeholder="图片url" @change="onAddImageElement">
+                  <el-option label="腾讯云" v-bind:value="'https://tic-res-1259648581.cos.ap-shanghai.myqcloud.com/demo/qcloud.jpg'"></el-option>
+                </el-select>
+              </el-form-item>
             </el-form>
 
           </el-tab-pane>
@@ -429,19 +425,16 @@
 
               <el-form-item label="新增视频文件">
                 <el-select placeholder="视频文件" @change="onAddVideoFile">
-                  <el-option label="腾讯教育"
-                    v-bind:value="'https://tic-res-1259648581.cos.ap-shanghai.myqcloud.com/demo/tiw-vod.mp4'">
+                  <el-option label="腾讯教育" v-bind:value="'https://tic-res-1259648581.cos.ap-shanghai.myqcloud.com/demo/tiw-vod.mp4'">
                   </el-option>
                 </el-select>
               </el-form-item>
 
               <el-form-item label="新增H5网页">
                 <el-select placeholder="H5网页地址" @change="onAddH5File">
-                  <el-option label="腾讯云互动课堂"
-                      v-bind:value="'https://cloud.tencent.com/solution/tic'">
+                  <el-option label="腾讯云互动课堂" v-bind:value="'https://cloud.tencent.com/solution/tic'">
                   </el-option>
-                  <el-option label="腾讯云官网"
-                    v-bind:value="'https://cloud.tencent.com/'">
+                  <el-option label="腾讯云官网" v-bind:value="'https://cloud.tencent.com/'">
                   </el-option>
                 </el-select>
               </el-form-item>
@@ -473,13 +466,13 @@
 
   </div>
 
-  <script src="//imgcache.qq.com/open/qcloud/video/vcplayer/TcPlayer-2.3.2.js" charset="utf-8"></script>
 
-  <!-- AXIOS SDK 白板SDK依赖axios（后续版本会去掉该依赖） -->
+  <link href="https://resources-tiw.qcloudtrtc.com/thirdpart/videojs/video-js.min.css" rel="stylesheet">
+  <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/videojs/video.min.js"></script>
+
   <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/axios/axios.min.js"></script>
 
   <!-- WebRTC SDK -->
-  <!-- <script src="https://sqimg.qq.com/expert_qq/webrtc/3.4.2/WebRTCAPI.min.js"></script> -->
   <script src="./libs/trtc.js"></script>
   <!-- WebIM SDK -->
   <script src="https://resources-tiw.qcloudtrtc.com/webim/webim.min.js"></script>
@@ -488,11 +481,11 @@
   <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/cos/5.1.0/cos.min.js"></script>
 
   <!-- 白板SDK -->
-  <script src="https://resources-tiw.qcloudtrtc.com/board/2.4.0/TEduBoard.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/board/2.4.4/TEduBoard.min.js"></script>
   <!-- <script src="libs/TEduBoard.min.js"></script> -->
 
   <!-- TIC SDK 可根据开源代码自行编译TIC-->
-  <script src="https://resources-tiw.qcloudtrtc.com/tic/2.4.1/TIC.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/tic/2.4.3/TIC.min.js"></script>
   <!-- <script src="libs/TIC.js"></script> -->
 
   <script src="libs/thirdpart/purl.js"></script>
