--- a/PaaS/小程序/webrtc-room + webview/webview链接页面源码/webview-source/miniprogram.html
+++ b/PaaS/小程序/webrtc-room + webview/webview链接页面源码/webview-source/miniprogram.html
@@ -25,88 +25,39 @@
       overflow: hidden;
     }
 
-    .container {
-      width: 100%;
-      height: 100%;
-    }
-
-    .board-container {
-      width: 100%;
-      height: 100%;
-      box-sizing: border-box;
-    }
-
-    .el-tab-pane {
-      padding: 0 !important;
-      height: 100%;
-      overflow: hidden;
-    }
-
-
-    .el-tabs__header {
-      height: 40px;
-    }
-
     .el-tabs__content {
-      height: calc(100% - 40px);
-      padding: 0 !important;
+      /* padding: 0 !important;
+      width: 100%;
+      height: 100%;
+      overflow: hidden; */
     }
 
-    .empty-el {
-      background: red;
-      width: 100% !important;
-      height: 30% !important;
+    #app {
+      display: flex;
+      width: 100%;
+      height: 100%;
     }
 
-    /* 竖屏*/
-    @media (orientation: portrait) {
-      .board-container {
-        padding-left: 0 !important;
-      }
-
-      /* .container {
-        flex-direction: column;
-      } */
-
-      /* .empty-el {
-        background: red;
-        width: 100% !important;
-        height: 30% !important;
-      }
-
-      .board-container {
-        height: 70%;
-      } */
+    .board-box {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
     }
 
-    /* 横屏*/
-    @media (orientation: landscape) {
-      .board-container {
-        padding-top: 0 !important;
-      }
+    .board-box .el-tabs__header {}
 
-      /* .empty-el {
-        background: yellow;
-        height: 100% !important;
-        width: 30% !important;
-      }
-
-      .board-container {
-        width: 70%;
-      }
-
-      .container {
-        flex-direction: row;
-      } */
+    .board-box .el-tabs__content {
+      flex: 1;
+      padding: 0;
     }
   </style>
 </head>
 
 <body>
-  <div id="app" class="container">
-    <el-tabs class="board-container" type="border-card" style="display: none;" v-show="isShow"
-      v-bind:style="{ paddingTop: videoSize + 'px',paddingLeft: videoSize + 'px' }">
-      <el-tab-pane label="白板">
+  <div id="app">
+    <div id="emptyBlock" v-bind:style="{width: videoSize + 'px'}"></div>
+    <el-tabs class="board-box" type="border-card" style="display: none;flex:1;" v-show="isShow">
+      <el-tab-pane label="白板" style="height: 100%;">
         <el-container style="position: relative; height: 100%;">
           <el-header style="z-index:10;">
             <el-collapse accordion>
@@ -127,14 +78,12 @@
                     <el-button size="mini" @click="addBoard" v-text="'新建白板'"></el-button>
                   </el-col>
                   <el-col :span="9">
-                    <el-select style="width: 100px;" size="mini" placeholder="工具" v-model="toolType"
-                      @change="onSetToolType">
+                    <el-select style="width: 100px;" size="mini" placeholder="工具" v-model="toolType" @change="onSetToolType">
                       <el-option label="画笔" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_PEN"></el-option>
                       <el-option label="直线" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_LINE"></el-option>
                       <el-option label="实心(椭)圆" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_OVAL_SOLID">
                       </el-option>
-                      <el-option label="空心(椭)圆" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_OVAL">
-                      </el-option>
+                      <el-option label="空心(椭)圆" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_OVAL"></el-option>
                       <el-option label="实心矩形" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_RECT_SOLID">
                       </el-option>
                       <el-option label="空心矩形" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_RECT"></el-option>
@@ -145,8 +94,7 @@
                       </el-option>
                       <el-option label="点选" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_POINT_SELECT">
                       </el-option>
-                      <el-option label="移动" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_ZOOM_DRAG">
-                      </el-option>
+                      <el-option label="移动" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_ZOOM_DRAG"></el-option>
 
                       <el-option label="鼠标" v-bind:value="TEduBoard.TOOL_TYPE.TEDU_BOARD_TOOL_TYPE_MOUSE"></el-option>
                     </el-select>
@@ -191,20 +139,11 @@
                     <el-button size="mini" @click="onDeleteBoard(-1)" v-text="'删除白板'"></el-button>
                   </el-col>
                   <el-col :span="9">
-                    <el-select style="width: 100px;" size="mini" placeholder="工具" v-model="backgroundImage"
-                      @change="onSetBackgroundImage">
-                      <el-option label="美图1"
-                        v-bind:value="'https://main.qcloudimg.com/raw/36d31e0d6f9d24a9b5727ab5e21b4b8c.jpg'">
-                      </el-option>
-                      <el-option label="美图2"
-                        v-bind:value="'https://main.qcloudimg.com/raw/a748528fecffd13a466a3a6c23ad1f45.jpg'">
-                      </el-option>
-                      <el-option label="美图3"
-                        v-bind:value="'https://main.qcloudimg.com/raw/5e3f50336b85071ef09affcd967e679d.jpg'">
-                      </el-option>
-                      <el-option label="美图4"
-                        v-bind:value="'https://main.qcloudimg.com/raw/4a897d60a49ae211f6e492f6ebe8340f.jpg'">
-                      </el-option>
+                    <el-select style="width: 100px;" size="mini" placeholder="工具" v-model="backgroundImage" @change="onSetBackgroundImage">
+                      <el-option label="美图1" v-bind:value="'https://main.qcloudimg.com/raw/36d31e0d6f9d24a9b5727ab5e21b4b8c.jpg'"></el-option>
+                      <el-option label="美图2" v-bind:value="'https://main.qcloudimg.com/raw/a748528fecffd13a466a3a6c23ad1f45.jpg'"></el-option>
+                      <el-option label="美图3" v-bind:value="'https://main.qcloudimg.com/raw/5e3f50336b85071ef09affcd967e679d.jpg'"></el-option>
+                      <el-option label="美图4" v-bind:value="'https://main.qcloudimg.com/raw/4a897d60a49ae211f6e492f6ebe8340f.jpg'"></el-option>
                     </el-select>
                   </el-col>
                   <el-col :span="7">
@@ -218,8 +157,7 @@
                     <el-button size="mini" @click="onclearDraws" v-text="'清空涂鸦'"></el-button>
                   </el-col>
                   <el-col :span="9">
-                    <el-select style="width: 100px;" size="mini" placeholder="工具" v-model="backgroundImageH5"
-                      @change="onSetBackgroundH5">
+                    <el-select style="width: 100px;" size="mini" placeholder="工具" v-model="backgroundImageH5" @change="onSetBackgroundH5">
                       <el-option label="QQ" v-bind:value="'https://www.qq.com/'"></el-option>
                       <el-option label="腾讯云" v-bind:value="'https://cloud.tencent.com'"></el-option>
                     </el-select>
@@ -234,8 +172,19 @@
                   <el-col :span="8">
                     <el-button size="mini" @click="onClear" v-text="'清空白板'"></el-button>
                   </el-col>
+                  <el-col :span="9">
+                    <el-select style="width: 100px;" size="mini" placeholder="H5文件" @change="onAddH5File">
+                      <el-option label="Light Animation-blue" v-bind:value="'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/2019-05-08-15-38-54/index.html'">
+                      </el-option>
+                      <el-option label="欢迎新同学" v-bind:value="'https://ppt2h5-1259648581.cos.ap-shanghai.myqcloud.com/00c71am880jcqc5p5rkb/index.html'">
+                      </el-option>
+                      <el-option label="341-国立教学方案" v-bind:value="'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/0o5stagbd6b264ei59jb/index.html'">
+                      </el-option>
+                    </el-select>
+                  </el-col>
                   <el-col :span="7">
-                    <input id="file_input" hidden type="file" @change="uploadFile">
+                    <input id="file_input" hidden type="file" @change="uploadFile"
+                      accept="image/*, application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document, application/vnd.openxmlformats-officedocument.presentationml.presentation, application/vnd.ms-powerpoint, application/vnd.ms-excel">
                     <el-button size="mini" @click.native="()=>{document.getElementById('file_input').click();}">上传文件
                     </el-button>
                   </el-col>
@@ -248,20 +197,20 @@
               </el-collapse-item>
             </el-collapse>
           </el-header>
-          <el-footer style="height:auto;bottom: 0px;">
-            <el-pagination style="padding-top: 0px; padding-bottom: 0px;" :page-size="1" :pager-count="3"
-              layout="total, prev, pager, next" :total.sync="boardData.total" :current-page.sync="boardData.current"
-              @prev-click="prevBoard" @current-change="onGotoBoard" @next-click="nextBoard">
+
+          <el-main id="sketchpad" style="padding: 0; z-index:5; height: 100%;"></el-main>
+
+          <el-footer style="height: 70px; bottom: 0px;">
+            <el-pagination style="padding-top: 0px; padding-bottom: 0px;" :page-size="1" :pager-count="3" layout="total, prev, pager, next" :total.sync="boardData.total"
+              :current-page.sync="boardData.current" @prev-click="prevBoard" @current-change="onGotoBoard" @next-click="nextBoard">
             </el-pagination>
           </el-footer>
-          <el-main id="sketchpad" style="padding: 0; z-index:5; height: 100%;"></el-main>
         </el-container>
       </el-tab-pane>
-      <el-tab-pane label="IM">
+      <el-tab-pane label="IM" style="height: 100%;">
         <el-container>
           <el-main>
-            <div id="msg_box" class="im-log-box"
-              style="position: relative; height: 20vh; max-height: 40vh; overflow-y: scroll;">
+            <div id="msg_box" class="im-log-box" style="position: relative; height: 20vh; max-height: 40vh; overflow-y: scroll;">
               <ul>
                 <li v-for="msg in msgs">
                   <span class="send">{{msg.send}}</span>
@@ -289,24 +238,26 @@
     </el-tabs>
   </div>
 
+
+  <link href="https://resources-tiw.qcloudtrtc.com/thirdpart/videojs/video-js.min.css" rel="stylesheet">
+  <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/videojs/video.min.js"></script>
+
+  <!-- AXIOS SDK 白板SDK依赖axios（后续版本会去掉该依赖） -->
   <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/axios/axios.min.js"></script>
+
   <!-- WebIM SDK -->
-  <script src="https://resources-tiw.qcloudtrtc.com/webim/1.7.1/webim.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/webim/webim.min.js"></script>
   <!-- COS SDK -->
   <script src="https://resources-tiw.qcloudtrtc.com/thirdpart/cos/5.1.0/cos.min.js"></script>
   <!-- 白板SDK -->
-  <script src="https://resources-tiw.qcloudtrtc.com/board/2.3.7/TEduBoard.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/board/2.4.4/TEduBoard.min.js"></script>
 
   <!-- TIC SDK 可根据开源代码自行编译TIC-->
-  <script src="https://resources-tiw.qcloudtrtc.com/tic/2.4.1/TIC.min.js"></script>
+  <script src="https://resources-tiw.qcloudtrtc.com/tic/2.4.3/TIC.min.js"></script>
 
   <script src="libs/thirdpart/purl.js"></script>
   <script src="libs/thirdpart/vconsole.min.js"></script>
   <script src="js/miniprogram.js"></script>
-
-  <script>
-    var vConsole = new VConsole();
-  </script>
 </body>
 
 </html>
